--- a/SonarV2.CSharp.csproj
+++ b/SonarV2.CSharp.csproj
@@ -75,7 +75,38 @@
     <Compile Include="Assets\SonarCode\Controller\ControllerInput.cs" />
     <Compile Include="Assets\SonarCode\Controller\GameAxis.cs" />
     <Compile Include="Assets\SonarCode\Controller\GameButton.cs" />
+    <Compile Include="Assets\SonarCode\Map\MacroMapUnit.cs" />
+    <Compile Include="Assets\SonarCode\Map\Map.cs" />
+    <Compile Include="Assets\SonarCode\Map\MapUnit.cs" />
     <Compile Include="Assets\SonarCode\Math\GameVector2.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Entity.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\LockdownSwitch.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Player.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Radio.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Spectres\Dumb.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Spectres\HidingTutorialWrath.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Spectres\Pride.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Spectres\Siren.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Spectres\Spectre.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Spectres\Stalker.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Spectres\Wrath.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Throwable\ThrowManager.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Throwable\Throwable.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Entity\Throwable\WalkieTalkie.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Environment\Debris.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Environment\Door.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Environment\Environment.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Environment\Exit.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Environment\Floor.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Environment\HidingPlace.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Environment\Janitor.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Environment\Landmark.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Environment\SpectreActivate.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Environment\Wall.cs" />
+    <Compile Include="Assets\SonarCode\Objects\GameTypes\GameColor.cs" />
+    <Compile Include="Assets\SonarCode\Objects\GameTypes\GameRectangle.cs" />
+    <Compile Include="Assets\SonarCode\Objects\GameTypes\GameTexture.cs" />
+    <Compile Include="Assets\SonarCode\Objects\Object.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AKRESULT.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkActionOnEventType.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkAudioFormat.cs" />
