--- a/SonarV2.CSharp.csproj
+++ b/SonarV2.CSharp.csproj
@@ -103,10 +103,90 @@
     <Compile Include="Assets\SonarCode\Objects\Environment\Landmark.cs" />
     <Compile Include="Assets\SonarCode\Objects\Environment\SpectreActivate.cs" />
     <Compile Include="Assets\SonarCode\Objects\Environment\Wall.cs" />
+    <Compile Include="Assets\SonarCode\Objects\GameTypes\ContentManager.cs" />
     <Compile Include="Assets\SonarCode\Objects\GameTypes\GameColor.cs" />
     <Compile Include="Assets\SonarCode\Objects\GameTypes\GameRectangle.cs" />
     <Compile Include="Assets\SonarCode\Objects\GameTypes\GameTexture.cs" />
     <Compile Include="Assets\SonarCode\Objects\Object.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Condition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\ActivateCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\AdditionalSoundHeardCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\AlertedTimeCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\AndCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\AtTargetCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\AtWaitPositionCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\AwakeTimeCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\BehindDoorCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\CollidingCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\DoorInWayCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\ExorcisedCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\FinishedSearchingCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\FleeTimerCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\NeutralizedCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\NextToDoorCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\NotCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\NotNeutralizedCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\OrCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\PlayerBehindDoor.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\PlayerCloseCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\PlayerFacingCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\PlayerHidingCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\PlayerInSightCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\PlayerInSirenRangeCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\SoundBehindDoorCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\SoundHeardCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Conditions\VeryCloseCondition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\State.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\StateMachine.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\AlertedState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\BreakDoorState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\ChaseAroundCornerState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\ChaseState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\DumbStates\DumbPossessState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\DumbStates\FleeState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\DumbStates\PatrolState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\InactiveState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\InvestigateState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\OpenDoorInvestigateState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\OpenDoorState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\PossessState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\PrideStates\PrideHallucinateState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\SirenStates\AlertState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\SirenStates\AwakeState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\SirenStates\SleepState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\StalkerStates\StalkState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\StalkerStates\StalkerConfusionState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\StalkerStates\StalkerFleeState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\StalkerStates\WanderState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\WrathStates\WrathAtkIdleState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\States\WrathStates\WrathWaitState.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\DumbTransitions\ToFleeTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\DumbTransitions\ToInvestigateFromChaseTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\DumbTransitions\ToInvestigateFromInvestigateTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\DumbTransitions\ToPatrolFromFleeTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\HidingTutorialWrathTransition\ToPatrolFromInactiveTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\HidingTutorialWrathTransition\ToWaitFromPatrolTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\SirenTransitions\ToSleepTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\SirenTransitions\WakeUpTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\StalkerTransitions\StalkerToInvestigateFromStalkTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\StalkerTransitions\StalkerToStalkTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToAlertedTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToBreakDoorFromAroundCorner.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToBreakDoorTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToChaseFromAroundCornerTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToChaseFromBreakDoorTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToChaseTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToInvestigateFromAroundCornerTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToInvestigateFromPatrolTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToInvestigateTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToOpenDoor.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToOpenDoorFromInvestigateTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToPatrolFromAroundCornerTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToPatrolFromDoorTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToPatrolFromPossessedNeutralizedTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToPatrolTransition.cs" />
+    <Compile Include="Assets\SonarCode\StateMachine\Transitions\ToPossessTransition.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AKRESULT.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkActionOnEventType.cs" />
     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkAudioFormat.cs" />
